{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 16,
  "lineage": "f506b5e4-854f-92a4-d73f-1cd5248af018",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dbserver-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b2ac948e23c57071",
            "arn": "arn:aws:ec2:eu-central-1:966620359499:instance/i-04b0a64a4741aaa5f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04b0a64a4741aaa5f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "packer-proba",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dbc0eaee5c03e074",
            "private_dns": "ip-172-31-44-157.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.44.157",
            "public_dns": "ec2-3-66-110-18.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.66.110.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a77b23b04455db52",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terraform-20230627101009053400000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095c174cde7c31cd4",
            "tags": {
              "CreatedBy": "vedad.nuhic",
              "IaC": "Terraform",
              "Name": "task-12-dbserver-tf",
              "Project": "task-12"
            },
            "tags_all": {
              "CreatedBy": "vedad.nuhic",
              "IaC": "Terraform",
              "Name": "task-12-dbserver-tf",
              "Project": "task-12"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ea51758ae0b2edee"
            ]
          },
          "dependencies": [
            "aws_security_group.database-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b2ac948e23c57071",
            "arn": "arn:aws:ec2:eu-central-1:966620359499:instance/i-06a90b7236215359e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a90b7236215359e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "packer-proba",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0495259d1a110e715",
            "private_dns": "ip-172-31-42-156.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.42.156",
            "public_dns": "ec2-3-122-127-232.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.122.127.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03bd5ad27a5730863",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terraform-20230627101009053400000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095c174cde7c31cd4",
            "tags": {
              "CreatedBy": "vedad.nuhic",
              "IaC": "Terraform",
              "Name": "task-12-webserver-tf",
              "Project": "task-12"
            },
            "tags_all": {
              "CreatedBy": "vedad.nuhic",
              "IaC": "Terraform",
              "Name": "task-12-webserver-tf",
              "Project": "task-12"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b2973e97f63e77e3"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:966620359499:security-group/sg-0ea51758ae0b2edee",
            "description": "Security group for MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea51758ae0b2edee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20230627101009053400000001",
            "name_prefix": "terraform-",
            "owner_id": "966620359499",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "vedad.nuhic",
              "IaC": "Terraform",
              "Name": "task-12-sg-dbserver-tf",
              "Project": "task-12"
            },
            "tags_all": {
              "CreatedBy": "vedad.nuhic",
              "IaC": "Terraform",
              "Name": "task-12-sg-dbserver-tf",
              "Project": "task-12"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebf4dccc1da8f989"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:966620359499:security-group/sg-0b2973e97f63e77e3",
            "description": "Allow SSH and HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2973e97f63e77e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230627101009053400000002",
            "name_prefix": "terraform-",
            "owner_id": "966620359499",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "vedad.nuhic",
              "IaC": "Terraform",
              "Name": "task-12-sg-webserver-tf",
              "Project": "task-12"
            },
            "tags_all": {
              "CreatedBy": "vedad.nuhic",
              "IaC": "Terraform",
              "Name": "task-12-sg-webserver-tf",
              "Project": "task-12"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebf4dccc1da8f989"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}